add dialog connection, clear code
