# openapi.yaml
@@ -72,6 +72,35 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/ErrorResponse'
+  /user/chat-id:
+    get:
+      tags:
+      - User
+      summary: Get chat_id
+      description: Get telegram's chat id by user id
+      operationId: chatid
+      parameters:
+      - name: user_id
+        in: query
+        description: User's id
+        required: true
+        style: form
+        explode: true
+        schema:
+          $ref: '#/components/schemas/UserChatIdRequest'
+      responses:
+        "200":
+          description: Successful operation
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/UserChatIdResponse'
+        "400":
+          description: Request Error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
   /logs:
     get:
       tags:
@@ -472,9 +501,20 @@ components:
         user_id:
           type: integer
           example: 13
+    UserChatIdResponse:
+      required:
+      - chat_id
+      type: object
+      properties:
+        chat_id:
+          type: integer
+          example: 90284375
     UserIdRequest:
       type: integer
       example: 90284375
+    UserChatIdRequest:
+      type: integer
+      example: 1
     UserValidateRequest:
       type: string
       example: query_id=AAGcqlFKAAAAAJyqUUp6-Y62&user=%7B%22id%22%3A1246866076%2C%22first_name%22%3A%22Dante%22%2C%22last_name%22%3A%22%22%2C%22username%22%3A%22S_User%22%2C%22language_code%22%3A%22en%22%7D&auth_date=1651689536&hash=de7f6b26aadbd667a36d76d91969ecf6ffec70ffaa40b3e98d20555e2406bfbb
