# schemas/__init__.py
@@ -1,10 +1,11 @@
 from .models import BroadcastMessageRequest, BroadcastRegistrationRequest, UpdateRegistrationRequest, \
     BroadcastQuestionRequest, BroadcastVoteRequest, SendMessageRequest, BroadcastVoteResponse, \
     BroadcastRegistrationResponse, ErrorResponse, UpdateRegistrationResponse, BroadcastMessageResponse, \
-    MessageSentResponse, BroadcastQuestionResponse, Option, UserIdResponse, UserValidateResponse, LogsResponse
+    MessageSentResponse, BroadcastQuestionResponse, Option, UserIdResponse, UserValidateResponse, LogsResponse, \
+    UserChatIdResponse
 
 __all__ = ["BroadcastMessageRequest", "BroadcastRegistrationRequest", "UpdateRegistrationRequest",
            "BroadcastQuestionRequest", "BroadcastVoteRequest", "SendMessageRequest", "BroadcastVoteResponse",
            "BroadcastRegistrationResponse", "ErrorResponse", "UpdateRegistrationResponse", "BroadcastMessageResponse",
            "MessageSentResponse", "BroadcastQuestionResponse", "Option", "UserIdResponse", "UserValidateResponse",
-           "LogsResponse"]
+           "LogsResponse", "UserChatIdResponse"]
