# schemas/models.py
@@ -1,14 +1,12 @@
 # generated by datamodel-codegen:
 #   filename:  openapi.yaml
-#   timestamp: 2023-07-16T16:05:25+00:00
+#   timestamp: 2023-07-25T19:15:40+00:00
 
 from __future__ import annotations
 
 from typing import List
 
 from pydantic import BaseModel, Field
-
-from pathlib import Path
 
 
 class ErrorResponse(BaseModel):
@@ -80,8 +78,16 @@ class UserIdResponse(BaseModel):
     user_id: int = Field(..., example=13)
 
 
+class UserChatIdResponse(BaseModel):
+    chat_id: int = Field(..., example=90284375)
+
+
 class UserIdRequest(BaseModel):
     __root__: int = Field(..., example=90284375)
+
+
+class UserChatIdRequest(BaseModel):
+    __root__: int = Field(..., example=1)
 
 
 class UserValidateRequest(BaseModel):
